# aruco

aruco/: CMakeLists.txt  package.xml
aruco/src/ros/: ArucoNode.cpp
scripts/: arucomarker.py
