<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>aruco</name>
	<version>1.0.0</version>
	<description>The aruco package can be used to detect, track and calculate pose from aruco markers.</description>
	<maintainer email="tentone@outlook.pt">tentone</maintainer>
	<license>MIT</license>

        <buildtool_depend>ament_cmake</buildtool_depend>
        <buildtool_depend>rosidl_default_generators</buildtool_depend>

	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
	
	<build_depend>rclcpp</build_depend>
        <member_of_group>rosidl_interface_packages</member_of_group>
	<build_depend>std_msgs</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
